join() 메서드 테스트